--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 box-sizing: border-box;
 margin: 0;
 padding: 0;
+caret-color: transparent;
 /* border: solid white 1px; */
 }
 
@@ -46,7 +47,7 @@ h1 {
 #trioDiv {
     margin: auto;
     width: fit-content;
-   
+   margin-bottom: -2vh;
 }
 
 .results, .scores {
@@ -65,6 +66,17 @@ h1 {
 
 .scores {
     font-style: italic;
+}
+
+#matchComplete {
+    font-family: archivo, serif;
+    visibility: hidden;
+    font-size: 1.4rem;
+    letter-spacing: 0.16rem;
+    text-align: center; 
+    margin-bottom: 1.4vh;
+    color: rgb(241, 241, 241);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 table {
